syntax = "proto3";

// 查询商品(单次查询, 批量查询)

package api.product.v1;

option go_package = "product/api/product/v1;v1";
option java_multiple_files = true;
option java_package = "api.product.v1";

message ListProductsReq{
	int32 page = 1;
	int64 pageSize = 2;

	string categoryName = 3;
}

message Product {
	uint32 id = 1;
	string name = 2;
	string description = 3;
	string picture = 4;
	float price = 5;

	repeated string categories = 6;
}

message ListProductsResp {
	repeated Product products = 1;
}

message GetProductReq {
	uint32 id = 1;
}

message GetProductResp {
	Product product = 1;
}

message SearchProductsReq {
	string query = 1;
}

message SearchProductsResp {
	repeated Product results = 1;
}
